# translate-me-api

./: Cargo.toml
migrations/: 20231218190542_create-users.sql  20231218190748_create-workspaces.sql
migrations/2023-11-29-214727_create_users/: down.sql  up.sql
migrations/2023-12-03-205632_create_workspaces/: down.sql
src/: main.rs  models.rs  router.rs  schema.rs
src/api/: mod.rs  user.rs  workspace.rs
